                                 Muldis::D
---------------------------------------------------------------------------

2008-03-xx  Darren Duncan <perl@DarrenDuncan.net>

    * Language::MuldisD version 0.25.0 is released on CPAN as
    Language-MuldisD-0.25.0.tar.gz.

    * New file versions are: D.pm 0.25.0 and Types_Catalog.pod 0.22.0 and
    PTMD_Tiny.pod 0.17.0 and HDMD_Perl_Tiny.pod 0.14.0.  The other
    pre-existing versioned files are unchanged.

    * (D.pm)  Small updates to the TRADEMARK POLICY section.

    * (D.pm, PTMD_Tiny.pod, HDMD_Perl_Tiny.pod)  Renamed the quasi-constant
    second (authority) part of a fully-qualified name format for a Muldis D
    language variant, applicable only to the official/original (not
    embraced and extended) variants, from 'cpan:DUNCAND' to
    'http://muldis.com'.  This is because the main web address of Muldis
    Data Systems more closely represents the official authority on Muldis
    D, rather than CPAN which is more just a forum for publishing it.

    * (Types_Catalog.pod)  Reorganized the catalog type definitions into
    new groupings based more on purpose than type inheritence.

    * (Types_Catalog.pod, PTMD_Tiny.pod, HDMD_Perl_Tiny.pod)  Updated the
    Cat.E_ENK and Cat.E_PSAK types to remove each of their 'default'
    values.  Users now always specify the use of type-default values
    explicitly, using either generic literal or function invocation
    expressions, which makes user code more self-documenting and saves on
    some catalog complexity; that said, some Muldis D dialects may still
    have a short-hand for 'default'.

    * (Types_Catalog.pod)  Updated the Cat.ExprNode and Cat.ProcStmtArg
    types to remove each of their 'type' attributes.  Users now always do
    an explicit 'treated' func call when they need to, or otherwise the
    data type at each of these nodes is now just inferred from context, and
    so Muldis D is now more like a typical programming language as to what