@@ -1,7 +1,7 @@
                                  Muldis::D
 ---------------------------------------------------------------------------
 
-2008-03-xx  Darren Duncan <perl@DarrenDuncan.net>
+2008-04-xx  Darren Duncan <perl@DarrenDuncan.net>
 
     * Language::MuldisD version 0.25.0 is released on CPAN as
     Language-MuldisD-0.25.0.tar.gz.
@@ -10,7 +10,9 @@
     PTMD_Tiny.pod 0.17.0 and HDMD_Perl_Tiny.pod 0.14.0.  The other
     pre-existing versioned files are unchanged.
 
-    * (D.pm)  Small updates to the TRADEMARK POLICY section.
+    * (D.pm)  The TRADEMARK POLICY section was severely edited to excise
+    most legalese, and is now just half its previous size; the old longer
+    version was shunted off to the Muldis Data Systems' website.
 
     * (D.pm, PTMD_Tiny.pod, HDMD_Perl_Tiny.pod)  Renamed the quasi-constant
     second (authority) part of a fully-qualified name format for a Muldis D
